# MPRPC

./: .gitignore  CMakeLists.txt  README.md  autobuild.sh
example/: user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  UserService.cc  userservice.cc
example/caller/: CMakeLists.txt  calluserservice.cc
src/: CMakeLists.txt  mprpcapplication.cc  mprpcchannel.cc  mprpcconfigure.cc  mprpccontroller.cc  mprpcheader.pb.cc  mprpcheader.proto  mprpclogger.cc  mprpcprovider.cc  mprpczkclient.cc  rpcheader.proto
src/include/: mprpcapplication.h  mprpcchannel.h  mprpcconfigure.h  mprpccontroller.h  mprpcheader.pb.h  mprpclockqueue.h  mprpclogger.h  mprpcprovider.h  mprpczkclient.h
test/protobuf/: main.cpp  test.pb.cc  test.pb.h  test.proto
